crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_code_render.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: out
---
┌──────────────────┐
│let x = 1;        │
└──────────────────┘
