crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_compile_empty_source.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
assertion_line: 283
expression: result
---
Err(
    "empty template — no HTML content found",
)
