crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_compile_simple_template.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
assertion_line: 297
expression: result
---
Ok(
    "//! Auto-generated by svelte-ratatui compiler. Do not edit.\n\nuse std::collections::HashMap;\nuse crossterm::event::Event;\nuse ratatui::Frame;\nuse ratatui::layout::Rect;\nuse svelte_ratatui_compiler::ir::{IrElement, IrNode};\nuse svelte_ratatui_compiler::mapping::render_ir;\nuse svelte_ratatui_runtime::SvelteComponent;\n\npub struct Component;\n\nimpl SvelteComponent for Component {\n    fn render(&self, frame: &mut Frame, area: Rect) {\n        let root = IrNode::Element(IrElement {\n            tag: \"p\".into(),\n            attrs: HashMap::new(),\n            styles: HashMap::new(),\n            children: vec![\n                IrNode::text(\"{message}\"),\n            ],\n        });\n        render_ir(frame, area, &root);\n    }\n\n    fn handle_event(&mut self, _event: Event) -> bool {\n        false\n    }\n}\n",
)
