crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_details_open_render.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: out
---
┌▼ Info──────────────────────┐
│Visible detail              │
│                            │
│                            │
│                            │
└────────────────────────────┘
