crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_dialect_check_e001_async_effect.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: errors
---
[
    DialectError {
        code: "E001",
        line: 3,
        message: "E001: async effects must use db.subscribe() or ipc() patterns",
    },
]
