crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_dialect_check_e002_dynamic_component.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: errors
---
[
    DialectError {
        code: "E002",
        line: 5,
        message: "E002: dynamic components not supported in TUI mode",
    },
]
