crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_dialect_check_e003_raw_html.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: errors
---
[
    DialectError {
        code: "E003",
        line: 5,
        message: "E003: raw HTML has no TUI equivalent",
    },
]
