crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_dialect_check_multiple_violations.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: errors
---
[
    DialectError {
        code: "E001",
        line: 3,
        message: "E001: async effects must use db.subscribe() or ipc() patterns",
    },
    DialectError {
        code: "E002",
        line: 7,
        message: "E002: dynamic components not supported in TUI mode",
    },
    DialectError {
        code: "E003",
        line: 8,
        message: "E003: raw HTML has no TUI equivalent",
    },
]
