crates/svelte-ratatui-compiler/tests/snapshots/snapshot_tests__snapshot_input_with_value_render.snap
---
source: crates/svelte-ratatui-compiler/tests/snapshot_tests.rs
expression: out
---
┌text──────────────┐
│hello│            │
└──────────────────┘
